grammar.js
    source_file: ($) =>
      choice(
        seq($.program_activity, optional($.session_close_command)),
        $.session_close_command,
      ),

    program_activity: ($) =>
      choice($.session_activity, $.transaction_activity),

    transaction_activity: ($) =>
      choice(
        seq(
          $.start_transaction_command,
          optional(
            seq($.procedure_specification, optional($.end_transaction_command)),
          ),
        ),
        seq($.procedure_specification, optional($.end_transaction_command)),
        $.end_transaction_command,
      ),

    procedure_specification: ($) => $.procedure_body,

    procedure_body: ($) =>
      seq(
        optional($.at_schema_clause),
        optional($.binding_variable_definition_block),
        $.statement_block,
      ),

    statement_block: ($) => seq($.statement, repeat($.next_statement)),

    statement: ($) =>
      choice(
        $.composite_query_statement,
        $.linear_catalog_modifying_statement,
        $.linear_data_modifying_statement,
      ),

    linear_data_modifying_statement: ($) =>
      choice(
        $.focused_linear_data_modifying_statement,
        $.ambient_linear_data_modifying_statement,
      ),

    ambient_linear_data_modifying_statement: ($) =>
      choice(
        $.ambient_linear_data_modifying_statement_body,
        $.nested_data_modifying_procedure_specification,
      ),

    ambient_linear_data_modifying_statement_body: ($) =>
      seq(
        $.simple_linear_data_accessing_statement,
        optional($.primitive_result_statement),
      ),

    simple_linear_data_accessing_statement: ($) =>
      repeat1($.simple_data_accessing_statement),

    simple_data_accessing_statement: ($) =>
      choice($.simple_query_statement, $.simple_data_modifying_statement),

    simple_data_modifying_statement: ($) =>
      choice(
        $.primitive_data_modifying_statement,
        $.call_data_modifying_procedure_statement,
      ),

    primitive_data_modifying_statement: ($) =>
      choice(
        $.insert_statement,
        $.set_statement,
        $.remove_statement,
        $.delete_statement,
      ),

    // 13.2
    insert_statement: ($) => seq(ci("INSERT"), $.insert_graph_pattern),

    // 13.3
    simple_query_statement: ($) =>
      choice($.primitive_query_statement, $.call_query_statement),

    primitive_query_statement: ($) =>
      choice(
        $.match_statement,
        $.let_statement,
        $.for_statement,
        $.filter_statement,
        $.order_by_and_page_statement,
      ),

    // 14.4
    match_statement: ($) =>
      choice($.simple_match_statement, $.optional_match_statement),

    simple_match_statement: ($) =>
      seq(ci("MATCH"), $.graph_pattern_binding_table),

    primitive_result_statement: ($) =>
      choice(
        seq($.return_statement, optional($.order_by_and_page_statement)),
        ci("FINISH"),
      ),

    // 14.11
    return_statement: ($) => seq(ci("RETURN"), $.return_statement_body),

    return_statement_body: ($) =>
      seq(
        optional($.set_quantifier),
        choice("*", $.return_item_list),
        optional($.group_by_clause),
      ),

    return_item_list: ($) => commaSep1($.return_item),

    return_item: ($) =>
      seq($.value_expression, optional($.return_item_alias)),

    graph_pattern_binding_table: ($) =>
      seq($.graph_pattern, optional($.graph_pattern_yield_clause)),

    graph_pattern: ($) =>
      prec.right(seq(
        optional($.match_mode),
        $.path_pattern_list,
        optional($.keep_clause),
        optional($.graph_pattern_where_clause),
      )),

    path_pattern_list: ($) => prec.right(commaSep1($.path_pattern)),

    path_pattern: ($) =>
      seq(
        optional($.path_variable_declaration),
        optional($.path_pattern_prefix),
        $.path_pattern_expression,
      ),

    insert_graph_pattern: ($) => $.insert_path_pattern_list,

    insert_path_pattern_list: ($) => commaSep1($.insert_path_pattern),

    insert_path_pattern: ($) =>
      seq(
        $.insert_node_pattern,
        repeat(seq($.insert_edge_pattern, $.insert_node_pattern)),
      ),

    insert_node_pattern: ($) =>
      seq("(", optional($.insert_element_pattern_filler), ")"),

    insert_element_pattern_filler: ($) =>
      choice(
        seq(
          $.element_variable_declaration,
          optional($.label_and_property_set_specification),
        ),
        $.label_and_property_set_specification,
      ),

    label_and_property_set_specification: ($) =>
      choice(
        seq(
          $.is_or_colon,
          $.label_set_specification,
          optional($.element_property_specification),
        ),
        $.element_property_specification,
      ),

    // -----------------------------------------------------------------------
    // 16.6: Path pattern prefix
    // -----------------------------------------------------------------------

    path_pattern_expression: ($) =>
      choice(
        $.path_term,
        seq($.path_term, repeat1(seq("|+|", $.path_term))),
        seq($.path_term, repeat1(seq("|", $.path_term))),
      ),

    path_term: ($) => repeat1($.path_factor),

    path_factor: ($) =>
      choice(
        $.path_primary,
        seq($.path_primary, $.graph_pattern_quantifier),
        seq($.path_primary, "?"),
      ),

    path_primary: ($) =>
      choice(
        $.element_pattern,
        $.parenthesized_path_pattern_expression,
        $.simplified_path_pattern_expression,
      ),

    element_pattern: ($) => choice($.node_pattern, $.edge_pattern),

    node_pattern: ($) => seq("(", optional($.element_pattern_filler), ")"),

    element_pattern_filler: ($) =>
      choice(
        seq(
          $.element_variable_declaration,
          optional($.is_label_expression),
          optional($.element_pattern_predicate),
        ),
        seq($.is_label_expression, optional($.element_pattern_predicate)),
        $.element_pattern_predicate,
      ),

    element_variable_declaration: ($) => $.element_variable,

    is_label_expression: ($) => seq($.is_or_colon, $.label_expression),

    is_or_colon: (_$) => choice(ci("IS"), ":"),

    element_property_specification: ($) =>
      seq("{", optional($.property_key_value_pair_list), "}"),

    property_key_value_pair_list: ($) =>
      commaSep1($.property_key_value_pair),

    property_key_value_pair: ($) =>
      seq($.property_name, ":", $.value_expression),

    // Edge patterns
    label_expression: ($) =>
      choice(
        prec(PREC.LABEL_NEGATION, seq("!", $.label_expression)),
        prec.left(
          PREC.LABEL_CONJUNCTION,
          seq($.label_expression, "&", $.label_expression),
        ),
        prec.left(
          PREC.LABEL_DISJUNCTION,
          seq($.label_expression, "|", $.label_expression),
        ),
        $.label_name,
        "%",
        seq("(", $.label_expression, ")"),
      ),

    // -----------------------------------------------------------------------
    // 16.11: Graph pattern quantifier
    // -----------------------------------------------------------------------

    label_set_specification: ($) =>
      seq($.label_name, repeat(seq("&", $.label_name))),

    // 18.5
    value_expression: ($) =>
      choice(
        // Unary sign
        prec.right(
          PREC.UNARY,
          seq(choice("+", "-"), $.value_expression),
        ),
        // Multiplicative
        prec.left(
          PREC.MULTIPLY,
          seq(
            $.value_expression,
            choice("*", "/"),
            $.value_expression,
          ),
        ),
        // Additive
        prec.left(
          PREC.ADD,
          seq(
            $.value_expression,
            choice("+", "-"),
            $.value_expression,
          ),
        ),
        // Concatenation
        prec.left(
          PREC.CONCATENATION,
          seq($.value_expression, "||", $.value_expression),
        ),
        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq($.value_expression, $.comp_op, $.value_expression),
        ),
        // Predicates
        $.predicate,
        // Normalized predicate
        prec.left(
          PREC.IS,
          seq(
            $.value_expression,
            ci("IS"),
            optional(ci("NOT")),
            optional($.normal_form),
            ci("NORMALIZED"),
          ),
        ),
        // NOT
        prec.right(PREC.NOT, seq(ci("NOT"), $.value_expression)),
        // IS [NOT] truth value
        prec.left(
          PREC.IS,
          seq(
            $.value_expression,
            ci("IS"),
            optional(ci("NOT")),
            $.truth_value,
          ),
        ),
        // AND
        prec.left(
          PREC.AND,
          seq($.value_expression, ci("AND"), $.value_expression),
        ),
        // OR / XOR
        prec.left(
          PREC.OR,
          seq(
            $.value_expression,
            choice(ci("OR"), ci("XOR")),
            $.value_expression,
          ),
        ),
        // PROPERTY? GRAPH graphExpression
        seq(
          optional(ci("PROPERTY")),
          ci("GRAPH"),
          $.graph_expression,
        ),
        // BINDING? TABLE bindingTableExpression
        seq(
          optional(ci("BINDING")),
          ci("TABLE"),
          $.binding_table_expression,
        ),
        // Value functions
        $.value_function,
        // Primary
        $.value_expression_primary,
      ),

    value_expression_primary: ($) =>
      choice(
        $.parenthesized_value_expression,
        $.aggregate_function,
        $.unsigned_value_specification,
        $.path_value_constructor,
        prec.left(
          PREC.PROPERTY,
          seq($.value_expression_primary, ".", $.property_name),
        ),
        $.value_query_expression,
        $.case_expression,
        $.cast_specification,
        $.element_id_function,
        $.let_value_expression,
        $.binding_variable_reference,
      ),

    unsigned_value_specification: ($) =>
      choice($.unsigned_literal, $.general_value_specification),

    binding_variable_reference: ($) => $.binding_variable,

    // 20.14
    label_name: ($) => $.identifier,

    property_name: ($) => $.identifier,

    element_variable: ($) => $.binding_variable,

    binding_variable: ($) => $.regular_identifier,

    // Identifier
    identifier: ($) =>
      choice(
        $.regular_identifier,
        $.double_quoted_character_sequence,
        $.accent_quoted_character_sequence,
      ),

    regular_identifier: ($) =>
      choice($.regular_identifier_token, $.non_reserved_word),

    unsigned_literal: ($) =>
      choice($.unsigned_numeric_literal, $.general_literal),

    general_literal: ($) =>
      choice(
        $.boolean_literal,
        $.character_string_literal,
        $.byte_string_literal,
        $.temporal_literal,
        $.duration_literal,
        $.null_literal,
        $.list_literal,
        $.record_literal,
      ),

    regular_identifier_token: (_$) =>
      /[\p{ID_Start}\p{Pc}][\p{ID_Continue}]*/u,

    single_quoted_character_sequence: (_$) =>
      token(
        seq(
          optional("@"),
          "'",
          repeat(
            choice(
              /[^'\\\r\n]/,
              "''",
              /\\[\\'"`tbrnf]/,
              /\\u[0-9a-fA-F]{4}/,
              /\\U[0-9a-fA-F]{6}/,
            ),
          ),
          "'",
        ),
      ),

    character_string_literal: ($) =>
      choice(
        $.single_quoted_character_sequence,
        $.double_quoted_character_sequence,
      ),
